Add a //lib/labm8:notebooks utility script.

--- a/lib/labm8/BUILD
+++ b/lib/labm8/BUILD
@@ -390,6 +390,32 @@ py_test(
     ],
 )
 
+# A Jupyter notebook launcher that includes a bunch of dependencies which I
+# find useful. If you would like to include extra dependencies, create a new
+# py_binary target with this file as the srcs, and add the dependencies, like
+# this:
+#
+#    py_binary(
+#      name = "notebooks",
+#      srcs = ["//lib/labm8:notebooks"],
+#      deps = [
+#          # Your dependencies here.
+#      ],
+#    )
+py_binary(
+    name = "notebooks",
+    srcs = ["notebooks.py"],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":bazelutil",
+        ":viz",
+        ":pbutil",
+        "//third_party/py/absl",
+        "//third_party/py/jupyter",
+        "//third_party/py/matplotlib",
+    ],
+)
+
 py_library(
     name = "pbutil",
     srcs = ["pbutil.py"],
