Add a machine spec proto schema.

--- a/system/machines/proto/BUILD
+++ b/system/machines/proto/BUILD
@@ -6,4 +6,12 @@ py_proto_library(
     name = "data_tiers_pb2_py",
     protos = ["data_tiers.proto"],
     visibility = ["//system/machines:__subpackages__"],
+    deps = ["//third_party/py/protobuf"],
+)
+
+py_proto_library(
+    name = "machine_spec_pb2_py",
+    protos = ["machine_spec.proto"],
+    visibility = ["//system/machines:__subpackages__"],
+    deps = ["//third_party/py/protobuf"],
 )
