Update gtest, switch to their bazel build system.

--- a/learn/atcxx/BUILD
+++ b/learn/atcxx/BUILD
@@ -16,7 +16,7 @@ cc_test(
     size = "small",
     srcs = ["constructors.cc"],
     copts = ["-Iexternal/gtest/include"],
-    deps = ["@gtest//:main"],
+    deps = ["@gtest"],
 )
 
 cc_binary(
