--- a/learn/ctci/BUILD
+++ b/learn/ctci/BUILD
@@ -6,7 +6,7 @@ cc_library(
     hdrs = ["ctci.h"],
     deps = [
         "@com_github_google_benchmark//:benchmark",
-        "@gtest//:main",
+        "@gtest",
     ],
 )
 
@@ -14,10 +14,6 @@ cc_test(
     name = "0101-unique-chars-in-string-cpp",
     size = "small",
     srcs = ["0101-unique-chars-in-string.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -37,10 +33,6 @@ cc_test(
     name = "0102-reverse-string-cpp",
     size = "small",
     srcs = ["0102-reverse-string.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -48,10 +40,6 @@ cc_test(
     name = "0103-permutations-cpp",
     size = "small",
     srcs = ["0103-permutations.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -71,10 +59,6 @@ cc_test(
     name = "0104-escape-string-cpp",
     size = "small",
     srcs = ["0104-escape-string.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -94,10 +78,6 @@ cc_test(
     name = "0105-string-compression-cpp",
     size = "small",
     srcs = ["0105-string-compression.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -105,10 +85,6 @@ cc_test(
     name = "0107-matrix-zero-cpp",
     size = "small",
     srcs = ["0107-matrix-zero.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -116,10 +92,6 @@ cc_test(
     name = "0108-string-rotation-cpp",
     size = "small",
     srcs = ["0108-string-rotation.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -127,10 +99,6 @@ cc_test(
     name = "0201-list-remove-dups-cpp",
     size = "small",
     srcs = ["0201-list-remove-dups.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -150,10 +118,6 @@ cc_test(
     name = "0202-linked-list-k-last-cpp",
     size = "small",
     srcs = ["0202-linked-list-k-last.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -161,10 +125,6 @@ cc_test(
     name = "0207-list-palindrone-cpp",
     size = "small",
     srcs = ["0207-list-palindrone.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -172,10 +132,6 @@ cc_test(
     name = "0302-stack-min-cpp",
     size = "small",
     srcs = ["0302-stack-min.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -183,10 +139,6 @@ cc_test(
     name = "0303-set-of-stacks-cpp",
     size = "small",
     srcs = ["0303-set-of-stacks.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -194,10 +146,6 @@ cc_test(
     name = "0305-stack-queue-cpp",
     size = "small",
     srcs = ["0305-stack-queue.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -205,10 +153,6 @@ cc_test(
     name = "0402-directed-graph-routefinder-cpp",
     size = "small",
     srcs = ["0402-directed-graph-routefinder.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -216,10 +160,6 @@ cc_test(
     name = "0404-binary-tree-list-cpp",
     size = "small",
     srcs = ["0404-binary-tree-list.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -227,10 +167,6 @@ cc_test(
     name = "0502-binary-double-cpp",
     size = "small",
     srcs = ["0502-binary-double.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -238,10 +174,6 @@ cc_test(
     name = "0505-int-bitdiff-cpp",
     size = "small",
     srcs = ["0505-int-bitdiff.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -249,10 +181,6 @@ cc_test(
     name = "0508-horiz-line-cpp",
     size = "small",
     srcs = ["0508-horiz-line.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -260,10 +188,6 @@ cc_test(
     name = "1101-merge-arrays-cpp",
     size = "small",
     srcs = ["1101-merge-arrays.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -271,10 +195,6 @@ cc_test(
     name = "1102-sort-anagrams-cpp",
     size = "small",
     srcs = ["1102-sort-anagrams.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -282,10 +202,6 @@ cc_test(
     name = "1301-last-k-lines-cpp",
     size = "small",
     srcs = ["1301-last-k-lines.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -293,10 +209,6 @@ cc_test(
     name = "1307-tree-copy-cpp",
     size = "small",
     srcs = ["1307-tree-copy.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -316,10 +228,6 @@ cc_test(
     name = "1701-num-swap-cpp",
     size = "small",
     srcs = ["1701-num-swap.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
 
@@ -327,9 +235,5 @@ cc_test(
     name = "1702-tic-tac-toe-cpp",
     size = "small",
     srcs = ["1702-tic-tac-toe.cc"],
-    copts = [
-        "-Iexternal/gtest/include",
-        "-Iexternal/benchmark/include",
-    ],
     deps = [":ctci"],
 )
