--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -132,6 +132,7 @@ subprocess32==3.5.0
 tensorflow==1.8.0
 terminado==0.8.1
 testpath==0.3.1
+TogglPy==0.1.1
 tornado==5.0
 traitlets==4.3.2
 trash-cli==0.17.1.14
