--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -12,7 +12,7 @@ autoenv==1.0.0
 backports-abc==0.5
 backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
-bleach==2.1.3
+bleach==1.5.0
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
@@ -21,7 +21,7 @@ configparser==3.5.0
 coverage==4.5.1
 cpplint==1.3.0
 cycler==0.10.0
-decorator==4.2.1
+decorator==4.3.0
 docutils==0.14
 editdistance==0.3.1
 entrypoints==0.2.3
@@ -37,7 +37,7 @@ grpcio==1.15.0
 gspread==3.0.1
 gym==0.10.5
 h5py==2.7.1
-html5lib==1.0.1
+html5lib==0.9999999
 humanize==0.5.1
 idna==2.6
 ipdb==0.11
