--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -13,6 +13,7 @@ backports-abc==0.5
 backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
 bleach==1.5.0
+bokeh==1.0.2
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
@@ -67,6 +68,7 @@ notebook==5.7.2
 numpy==1.14.3
 oauth2client==4.1.3
 pandas==0.23.0
+pandas-bokeh==0.0.2
 pandocfilters==1.4.2
 parso==0.1.1
 pathlib2==2.3.2
