Auto BUILD format.

--- a/learn/daily/BUILD
+++ b/learn/daily/BUILD
@@ -5,15 +5,17 @@ cc_library(
     srcs = ["181211_matrix_multiplication.cc"],
     hdrs = ["181211_matrix_multiplication.h"],
     deps = [
+        "//phd:macros",
         "@boost//:numeric",
         "@boost//:thread",
-        "//phd:macros",
-    ]
+    ],
 )
 
 cc_test(
     name = "181211_matrix_multiplication_test",
     srcs = ["181211_matrix_multiplication_test.cc"],
-    deps = [":181211_matrix_multiplication",
-            "//phd:test",]
+    deps = [
+        ":181211_matrix_multiplication",
+        "//phd:test",
+    ],
 )
