Add DeepMind graph_nets python package.

--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -32,6 +32,7 @@ flask-cors==3.0.6
 funcsigs==1.0.2
 futures==3.1.1
 fuzzywuzzy==0.16.0
+graph_nets==1.0.2
 graphviz==0.9
 grpcio-tools==1.15.0
 grpcio==1.15.0
