--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -23,6 +23,9 @@ coverage==4.5.1
 cpplint==1.3.0
 cycler==0.10.0
 decorator==4.3.0
+# The graph_nets package depends on a specific version of dm-sonnet. See:
+# https://github.com/deepmind/graph_nets/blob/master/setup.py
+dm-sonnet==1.23
 docutils==0.14
 editdistance==0.3.1
 entrypoints==0.2.3
