Move //labm8:notebooks to //notebooks.

--- a/experimental/compilers/random_opt/notebooks/BUILD
+++ b/experimental/compilers/random_opt/notebooks/BUILD
@@ -1,9 +1,7 @@
-# Jupyter notebook with project dependencies.
-
 py_binary(
     name = "notebooks",
     srcs = ["//notebooks"],
     deps = [
-        "//datasets/me_db",
+        "//experimental/compilers/random_opt/proto:random_opt_py_pb2",
     ],
 )
