--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -58,6 +58,9 @@ jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 jupyter==1.0.0
+# Support for local runtimes with Google Colaboratory. See:
+# https://research.google.com/colaboratory/local-runtimes.html
+jupyter_http_over_ws==0.0.1a3
 Keras==2.1.6
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
