--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -71,6 +71,7 @@ mistune==0.8.3
 mysqlclient==1.3.12
 nbconvert==5.3.1
 nbformat==4.4.0
+networkx==2.2
 notebook==5.7.2
 numpy==1.14.3
 oauth2client==4.1.3
