Begin library for graph nets work.

--- a/learn/daily/d181212_graph_nets_shortest_path/notebooks/BUILD
+++ b/learn/daily/d181212_graph_nets_shortest_path/notebooks/BUILD
@@ -2,5 +2,7 @@ py_binary(
     name = "notebooks",
     srcs = ["//notebooks"],
     deps = [
+        "//learn/daily/d181212_graph_nets_shortest_path:model",
+        "//learn/daily/d181212_graph_nets_shortest_path:graph_util",
     ],
 )
