--- a/experimental/compilers/reachability/BUILD
+++ b/experimental/compilers/reachability/BUILD
@@ -1,13 +1,59 @@
 # Experiments in learning reachability analysis.
 
+load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
+
+py_library(
+    name = "control_flow_graph",
+    srcs = ["control_flow_graph.py"],
+    deps = [
+        "//third_party/py/absl",
+        "//third_party/py/networkx",
+    ],
+    visibility = ["//experimental/compilers/reachability:__subpackages__"],
+)
+
+py_test(
+    name = "control_flow_graph_test",
+    srcs = ["control_flow_graph_test.py"],
+    deps = [
+        ":control_flow_graph",
+        "//third_party/py/absl",
+        "//third_party/py/networkx",
+        "//third_party/py/pytest",
+    ],
+)
+
+py_library(
+    name = "control_flow_graph_generator",
+    srcs = ["control_flow_graph_generator.py"],
+    deps = [
+        ":control_flow_graph",
+        "//third_party/py/absl",
+        "//third_party/py/networkx",
+        "//third_party/py/numpy",
+    ],
+    visibility = ["//experimental/compilers/reachability:__subpackages__"],
+)
+
+py_test(
+    name = "control_flow_graph_generator_test",
+    srcs = ["control_flow_graph_generator_test.py"],
+    deps = [
+        ":control_flow_graph_generator",
+        "//third_party/py/absl",
+        "//third_party/py/networkx",
+        "//third_party/py/pytest",
+    ],
+)
+
 py_binary(
     name = "eval_model",
     srcs = ["eval_model.py"],
     deps = [
+        ":reachability_py_pb2",
         ":train_model",
         "//deeplearning/clgen:telemetry",
         "//deeplearning/clgen/corpuses:atomizers",
-        "//experimental/compilers/reachability/proto:reachability_py_pb2",
         "//labm8:pbutil",
         "//third_party/py/absl",
         "//third_party/py/humanize",
@@ -16,27 +62,21 @@ py_binary(
     ],
 )
 
-py_binary(
-    name = "reachability",
-    srcs = ["reachability.py"],
-    deps = [
-        "//experimental/compilers/reachability/proto:reachability_py_pb2",
-        "//labm8:fmt",
-        "//labm8:fs",
-        "//labm8:graph",
-        "//third_party/py/absl",
-        "//third_party/py/numpy",
-    ],
+py_proto_library(
+    name = "reachability_py_pb2",
+    protos = ["reachability.proto"],
+    deps = ["//third_party/py/protobuf"],
+    visibility = ["//experimental/compilers/reachability:__subpackages__"],
 )
 
 py_binary(
     name = "train_model",
     srcs = ["train_model.py"],
     deps = [
-        ":reachability",
+        ":control_flow_graph",
+        ":reachability_py_pb2",
         "//deeplearning/clgen:telemetry",
         "//deeplearning/clgen/corpuses:atomizers",
-        "//experimental/compilers/reachability/proto:reachability_py_pb2",
         "//labm8:pbutil",
         "//third_party/py/absl",
         "//third_party/py/humanize",
