--- a/experimental/compilers/reachability/BUILD
+++ b/experimental/compilers/reachability/BUILD
@@ -7,6 +7,8 @@ py_library(
     srcs = ["control_flow_graph.py"],
     visibility = ["//experimental/compilers/reachability:__subpackages__"],
     deps = [
+        ":reachability_py_pb2",
+        "//labm8:pbutil",
         "//third_party/py/absl",
         "//third_party/py/networkx",
     ],
