Add pydot to //third_party/py packages.

--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -108,6 +108,8 @@ py==1.5.2
 #   pycparser.ply.yacc.YaccError: Unable to build parser
 pycparser==2.17
 pycparserext==2016.2
+# Interface for graphviz. See: https://github.com/pydot/pydot
+pydot==1.4.1
 PyGithub==1.39
 Pygments==2.2.0
 pylint==1.8.2
