--- a/experimental/compilers/reachability/notebooks/BUILD
+++ b/experimental/compilers/reachability/notebooks/BUILD
@@ -4,6 +4,7 @@ py_binary(
     name = "notebooks",
     srcs = ["//notebooks"],
     deps = [
+        "//experimental/compilers/reachability:cfg_datasets",
         "//experimental/compilers/reachability:control_flow_graph",
         "//experimental/compilers/reachability:control_flow_graph_generator",
     ],
