--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -52,7 +52,7 @@ ipython==5.7.0
 ipywidgets==7.1.2
 isort==4.3.4
 jedi==0.11.1
-Jinja2==2.10
+jinja2==2.10
 jsonschema==2.6.0
 jupyter-client==5.2.2
 jupyter-console==5.2.0
