--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -148,6 +148,7 @@ TogglPy==0.1.1
 tornado==5.0
 traitlets==4.3.2
 trash-cli==0.17.1.14
+umap==0.1.1
 urllib3==1.22
 virtualenv==15.1.0
 vizdoom==1.1.6
