Work in progress on tidy up deeptune code.

--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
@@ -8,6 +8,7 @@ py_binary(
         ":utils",
         "//datasets/opencl/device_mapping:opencl_device_mapping_dataset",
         "//third_party/py/absl",
+        "//third_party/py/pandas",
     ],
 )
 
