Add deadcode to dataset.

--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
@@ -42,6 +42,7 @@ py_library(
     name = "utils",
     srcs = ["utils.py"],
     deps = [
+        "//datasets/opencl/device_mapping:opencl_device_mapping_dataset",
         "//deeplearning/clgen/corpuses:atomizers",
         "//third_party/py/absl",
         "//third_party/py/numpy",
