Make target public.

--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
@@ -3,6 +3,7 @@
 py_binary(
     name = "heterogeneous_mapping",
     srcs = ["heterogeneous_mapping.py"],
+    visibility = ["//visibility:public"],
     deps = [
         ":models",
         ":utils",
