--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
@@ -59,6 +59,7 @@ py_test(
     srcs = ["utils_test.py"],
     deps = [
         ":utils",
+        "//datasets/opencl/device_mapping:opencl_device_mapping_dataset",
         "//third_party/py/absl",
         "//third_party/py/pytest",
     ],
